--- a/src/about.html
+++ b/src/about.html
@@ -105,7 +105,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy;
+      Copyright &copy; 2017 -
       <script>
         document.write(new Date().getFullYear());
       </script>
