--- a/work.html
+++ b/work.html
@@ -109,7 +109,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy;
+      Copyright &copy; 2017 -
       <script>
         document.write(new Date().getFullYear());
       </script>
