--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-			integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-			crossorigin="anonymous"
-		/>
+		<script>
+			var cb = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href =
+					'https://use.fontawesome.com/releases/v5.2.0/css/all.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var cb2 = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href = 'css/main.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var raf =
+				requestAnimationFrame ||
+				mozRequestAnimationFrame ||
+				webkitRequestAnimationFrame ||
+				msRequestAnimationFrame
+			if (raf) raf(cb) && raf(cb2)
+			else window.addEventListener('load', cb)
+		</script>
 		<link rel="stylesheet" href="css/main.css" />
 		<title>Welcome To My Portfolio</title>
 	</head>
