--- a/index.html
+++ b/index.html
@@ -1,14 +1,97 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="ie=edge"><script>var cb=function(){var l=document.createElement('link')
-l.rel='stylesheet'
-l.href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'
-var h=document.getElementsByTagName('head')[0]
-h.parentNode.insertBefore(l,h)}
-var cb2=function(){var l=document.createElement('link')
-l.rel='stylesheet'
-l.href='css/main.css'
-var h=document.getElementsByTagName('head')[0]
-h.parentNode.insertBefore(l,h)}
-var raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame
-if(raf)raf(cb)&&raf(cb2)
-else window.addEventListener('load',cb)</script><link rel=stylesheet href=css/main.css><title>Welcome To My Portfolio</title><body id=bg-img><header><div class=menu-btn><div class=btn-line></div><div class=btn-line></div><div class=btn-line></div></div><nav class=menu><div class=menu-branding><div class=portrait></div></div><ul class=menu-nav><li class="nav-item current"><a href=index.html class=nav-link>Home</a><li class=nav-item><a href=about.html class=nav-link>About Me</a><li class=nav-item><a href=work.html class=nav-link>My Work</a><li class=nav-item><a href=contact.html class=nav-link>How To Reach Me</a></ul></nav></header><main id=home><h1 class=lg-heading>David
-<span class=text-secondary>Karrick</span></h1><h2 class=sm-heading>Web Developer, Programmer, Designer & Entrepreneur</h2><div class=icons><a href=https://twitter.com/WhiteWo42887956><i class="fab fa-twitter fa-2x"></i></a><a href=https://www.facebook.com/david.karrick.9><i class="fab fa-facebook fa-2x"></i></a><a href=https://www.linkedin.com/in/david-karrick-b8b32b182/><i class="fab fa-linkedin fa-2x"></i></a><a href="https://github.com/TheWhiteWolf1337?tab=repositories"><i class="fab fa-github fa-2x"></i></a></div></main><script src=javascript/main.js></script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<script>
+			var cb = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href =
+					'https://use.fontawesome.com/releases/v5.2.0/css/all.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var cb2 = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href = 'css/main.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var raf =
+				requestAnimationFrame ||
+				mozRequestAnimationFrame ||
+				webkitRequestAnimationFrame ||
+				msRequestAnimationFrame
+			if (raf) raf(cb) && raf(cb2)
+			else window.addEventListener('load', cb)
+		</script>
+		<title>Welcome To My Portfolio</title>
+	</head>
+
+	<body id="bg-img">
+		<header>
+			<div class="menu-btn">
+				<div class="btn-line"></div>
+				<div class="btn-line"></div>
+				<div class="btn-line"></div>
+			</div>
+
+			<nav class="menu">
+				<div class="menu-branding">
+					<div class="portrait"></div>
+				</div>
+				<ul class="menu-nav">
+					<li class="nav-item current">
+						<a href="index.html" class="nav-link">
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html" class="nav-link">
+							About Me
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="work.html" class="nav-link">
+							My Work
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="contact.html" class="nav-link">
+							How To Reach Me
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+
+		<main id="home">
+			<h1 class="lg-heading">
+				David
+				<span class="text-secondary">Karrick</span>
+			</h1>
+			<h2 class="sm-heading">
+				Web Developer, Programmer, Designer & Entrepreneur
+			</h2>
+			<div class="icons">
+				<a href="https://twitter.com/WhiteWo42887956">
+					<i class="fab fa-twitter fa-2x"></i>
+				</a>
+				<a href="https://www.facebook.com/david.karrick.9">
+					<i class="fab fa-facebook fa-2x"></i>
+				</a>
+				<a href="https://www.linkedin.com/in/david-karrick-b8b32b182/">
+					<i class="fab fa-linkedin fa-2x"></i>
+				</a>
+				<a href="https://github.com/TheWhiteWolf1337?tab=repositories">
+					<i class="fab fa-github fa-2x"></i>
+				</a>
+			</div>
+		</main>
+
+		<script src="javascript/main.js"></script>
+	</body>
+</html>
