--- a/work.html
+++ b/work.html
@@ -1,25 +1,147 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="ie=edge"><script>var cb=function(){var l=document.createElement('link')
-l.rel='stylesheet'
-l.href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'
-var h=document.getElementsByTagName('head')[0]
-h.parentNode.insertBefore(l,h)}
-var cb2=function(){var l=document.createElement('link')
-l.rel='stylesheet'
-l.href='css/main.css'
-var h=document.getElementsByTagName('head')[0]
-h.parentNode.insertBefore(l,h)}
-var raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame
-if(raf)raf(cb)&&raf(cb2)
-else window.addEventListener('load',cb)</script><title>View My Work</title><header><div class=menu-btn><div class=btn-line></div><div class=btn-line></div><div class=btn-line></div></div><nav class=menu><div class=menu-branding><div class=portrait></div></div><ul class=menu-nav><li class=nav-item><a href=index.html class=nav-link>Home</a><li class=nav-item><a href=about.html class=nav-link>About Me</a><li class="nav-item current"><a href=work.html class=nav-link>My Work</a><li class=nav-item><a href=contact.html class=nav-link>How To Reach Me</a></ul></nav></header><main id=work><h1 class=lg-heading>My
-<span class=text-secondary>Work</span></h1><h2 class=sm-heading>Check out some of my projects...</h2><div class=projects><div class=item><a href=#!><img src=img/projects/project1.jpg alt=Project></a>
-<a href=# class=btn-light><i class="fas fa-eye"></i>Project</a>
-<a href=# class=btn-dark><i class="fab fa-github"></i>Github</a></div><div class=item><a href=#!><img src=img/projects/project2.jpg alt=Project></a>
-<a href=# class=btn-light><i class="fas fa-eye"></i>Project</a>
-<a href=# class=btn-dark><i class="fab fa-github"></i>Github</a></div><div class=item><a href=#!><img src=img/projects/project3.jpg alt=Project></a>
-<a href=# class=btn-light><i class="fas fa-eye"></i>Project</a>
-<a href=# class=btn-dark><i class="fab fa-github"></i>Github</a></div><div class=item><a href=#!><img src=img/projects/project4.jpg alt=Project></a>
-<a href=# class=btn-light><i class="fas fa-eye"></i>Project</a>
-<a href=# class=btn-dark><i class="fab fa-github"></i>Github</a></div><div class=item><a href=#!><img src=img/projects/project5.jpg alt=Project></a>
-<a href=# class=btn-light><i class="fas fa-eye"></i>Project</a>
-<a href=# class=btn-dark><i class="fab fa-github"></i>Github</a></div></div></main><footer id=main-footer>Copyright &copy; 2017 -
-<script>document.write(new Date().getFullYear())</script></footer><script src=javascript/main.js></script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<script>
+			var cb = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href =
+					'https://use.fontawesome.com/releases/v5.2.0/css/all.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var cb2 = function() {
+				var l = document.createElement('link')
+				l.rel = 'stylesheet'
+				l.href = 'css/main.css'
+				var h = document.getElementsByTagName('head')[0]
+				h.parentNode.insertBefore(l, h)
+			}
+			var raf =
+				requestAnimationFrame ||
+				mozRequestAnimationFrame ||
+				webkitRequestAnimationFrame ||
+				msRequestAnimationFrame
+			if (raf) raf(cb) && raf(cb2)
+			else window.addEventListener('load', cb)
+		</script>
+		<title>View My Work</title>
+	</head>
+
+	<body>
+		<header>
+			<div class="menu-btn">
+				<div class="btn-line"></div>
+				<div class="btn-line"></div>
+				<div class="btn-line"></div>
+			</div>
+
+			<nav class="menu">
+				<div class="menu-branding">
+					<div class="portrait"></div>
+				</div>
+				<ul class="menu-nav">
+					<li class="nav-item">
+						<a href="index.html" class="nav-link">
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html" class="nav-link">
+							About Me
+						</a>
+					</li>
+					<li class="nav-item current">
+						<a href="work.html" class="nav-link">
+							My Work
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="contact.html" class="nav-link">
+							How To Reach Me
+						</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+
+		<main id="work">
+			<h1 class="lg-heading">
+				My
+				<span class="text-secondary">Work</span>
+			</h1>
+			<h2 class="sm-heading">
+				Check out some of my projects...
+			</h2>
+			<div class="projects">
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/project1.jpg" alt="Project" />
+					</a>
+					<a href="#" class="btn-light">
+						<i class="fas fa-eye"></i> Project
+					</a>
+					<a href="#" class="btn-dark">
+						<i class="fab fa-github"></i> Github
+					</a>
+				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/project2.jpg" alt="Project" />
+					</a>
+					<a href="#" class="btn-light">
+						<i class="fas fa-eye"></i> Project
+					</a>
+					<a href="#" class="btn-dark">
+						<i class="fab fa-github"></i> Github
+					</a>
+				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/project3.jpg" alt="Project" />
+					</a>
+					<a href="#" class="btn-light">
+						<i class="fas fa-eye"></i> Project
+					</a>
+					<a href="#" class="btn-dark">
+						<i class="fab fa-github"></i> Github
+					</a>
+				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/project4.jpg" alt="Project" />
+					</a>
+					<a href="#" class="btn-light">
+						<i class="fas fa-eye"></i> Project
+					</a>
+					<a href="#" class="btn-dark">
+						<i class="fab fa-github"></i> Github
+					</a>
+				</div>
+				<div class="item">
+					<a href="#!">
+						<img src="img/projects/project5.jpg" alt="Project" />
+					</a>
+					<a href="#" class="btn-light">
+						<i class="fas fa-eye"></i> Project
+					</a>
+					<a href="#" class="btn-dark">
+						<i class="fab fa-github"></i> Github
+					</a>
+				</div>
+			</div>
+		</main>
+
+		<footer id="main-footer">
+			Copyright &copy; 2017 -
+			<script>
+				document.write(new Date().getFullYear())
+			</script>
+		</footer>
+
+		<script src="javascript/main.js"></script>
+	</body>
+</html>
